--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,19 @@
-.App {
-  text-align: center;
+body,
+html {
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+* {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  /* font-size: 1.1rem; */
+  box-sizing: border-box;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  width: 80%;
+  display: inline-block;
+  margin: 0 auto;
 }
