--- a/client/src/Components/Navigation/NavigationItems/Search/Search.css
+++ b/client/src/Components/Navigation/NavigationItems/Search/Search.css
@@ -1,16 +1,16 @@
 .Search {
-  /* padding: 0 12px; */
-  padding-left: 12px;
+  padding-left: 0.75rem;
   box-shadow: 0 1px 7px rgba(0, 0, 0, 0.12);
   display: inline-block;
   margin-left: 1rem;
   border: 1px solid #ccc;
   border-radius: 2px;
+  width: 60%;
 }
 .Bar {
   height: 100%;
-  width: 400px;
-  padding: 14px 16px;
+  width: 80%;
+  padding: 0.8rem 1rem;
   border: none;
   font-size: 1rem;
   font-weight: 700;
