change media query breakpoint

--- a/client/src/Components/Navigation/NavigationItems/NavToggler/NavToggler.css
+++ b/client/src/Components/Navigation/NavigationItems/NavToggler/NavToggler.css
@@ -2,9 +2,9 @@
   z-index: 5;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 950px) {
   .NavToggler {
-    display: flex;
+    display: flex !important;
   }
 
   .NavToggler.Open + .NavButtons {
