--- a/client/src/Components/Navigation/NavigationItems/HelpSideDrawer/HelpSideDrawer.css
+++ b/client/src/Components/Navigation/NavigationItems/HelpSideDrawer/HelpSideDrawer.css
@@ -11,6 +11,7 @@
   z-index: 999;
   padding: 0;
   transition: all 0.2s;
+  border: 1px solid #dadada;
 }
 
 .HelpSideDrawer-Body {
@@ -77,7 +78,7 @@
   border-top: 1px solid #dadada;
   bottom: 0;
   width: 100%;
-  position: absolute;
+  position: relative;
 }
 
 .HelpSideDrawer-Footer a {
@@ -103,7 +104,6 @@
   .HelpSideDrawer {
     width: 350px;
     max-width: 100vw;
-    height: 100vh;
-    position: absolute;
+    height: auto;
   }
 }
