--- a/client/src/Components/Navigation/Search/Search.css
+++ b/client/src/Components/Navigation/Search/Search.css
@@ -31,7 +31,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  left: 10px;
+  left: 0.6em;
 }
 
 .Search-Submit {
@@ -39,7 +39,7 @@
   right: 10px;
   top: 50%;
   transform: translateY(-50%);
-  background-color: red;
+  background-color: #c23b22;
   border: none;
   padding: 0 0.8em;
   color: white;
@@ -47,14 +47,4 @@
   height: 75%;
   font-weight: 700;
   font-size: 0.85em;
-}
-
-.Home-Search {
-  font-size: 1rem;
-  font-weight: 700;
-  height: 3.5rem;
-  width: 1000px;
-  max-width: 95vw;
-  margin: auto;
-  display: block;
 }
