--- a/client/src/components/Footer/Footer/Footer.css
+++ b/client/src/components/Footer/Footer/Footer.css
@@ -15,3 +15,64 @@
   border-top: 1px solid rgb(219, 219, 219);
   background-color: white;
 }
+
+/* Footer toggle button */
+.ft-tgg {
+  position: fixed;
+  z-index: 10;
+  bottom: 13px;
+  left: 13px;
+  opacity: 1;
+  transition: opacity 0.4s;
+}
+
+.ft-tgg-btn {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  transition-property: background, border-color, color;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-out;
+  width: auto;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: normal;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  font-weight: 600;
+  padding-left: 16px;
+  padding-right: 16px;
+  min-width: 51.7771px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 3px 9px 3px;
+  color: rgb(72, 72, 72);
+  margin: 0px;
+  text-decoration: none;
+  border-radius: 4px;
+  border-width: 1px;
+  border-style: solid;
+  background: rgb(255, 255, 255);
+  border-color: transparent;
+}
+
+.ft-tgg-btn span {
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: normal;
+  color: inherit;
+}
+
+.ft-tgg-btn span > div {
+  display: table;
+  margin: 0px auto;
+}
+
+/* icon div */
+.ft-tgg-btn span > div > div {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.ft-tgg-btn i {
+  margin-right: 12px;
+}
