--- a/client/src/components/Navigation/NavigationItems/HelpSideDrawer/HelpSideDrawer.css
+++ b/client/src/components/Navigation/NavigationItems/HelpSideDrawer/HelpSideDrawer.css
@@ -8,7 +8,7 @@
   right: 0;
   position: absolute;
   background-color: #fff;
-  z-index: 999;
+  z-index: 500;
   padding: 0;
   transition: all 0.2s;
   border: 1px solid #dadada;
@@ -114,5 +114,6 @@
     width: 350px;
     max-width: 100vw;
     height: auto;
+    padding-left: 65px;
   }
 }
