--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,12 +1,13 @@
 .Home-Header {
-  margin: 30vh auto;
+  margin: 25vh auto;
   width: 1000px;
   max-width: 80%;
 }
 
 .Home-Header h1,
 .Home-Header h2 {
-  margin: 0.5rem 0;
+  margin: 0;
+  font-weight: 700;
 }
 
 .Home-Header h1 {
@@ -29,6 +30,7 @@
   max-width: 100%;
   display: block;
   margin: auto;
+  margin-top: 1em;
 }
 
 @media (max-width: 950px) {
