--- a/client/src/components/UI/Input/Input.css
+++ b/client/src/components/UI/Input/Input.css
@@ -8,7 +8,8 @@
   position: relative;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
   padding: 0.75rem;
   border: 1px solid #ccc;
   border-radius: 2px;
@@ -24,7 +25,7 @@ input[type="text"] {
   right: 0.5em;
   left: unset;
   color: #aaa;
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 .Icon-left i {
