add a flex-center class in App.css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,6 +46,12 @@ hr {
   flex-direction: row;
 }
 
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .unallow-link:hover {
   cursor: not-allowed;
 }
