--- a/client/src/components/UI/Input/Input.css
+++ b/client/src/components/UI/Input/Input.css
@@ -9,7 +9,8 @@
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"] {
   padding: 0.75rem;
   border: 1px solid #ccc;
   border-radius: 2px;
