--- a/client/src/views/Dashboard/Dashboard.css
+++ b/client/src/views/Dashboard/Dashboard.css
@@ -1,10 +1,13 @@
-.Users {
+.db-container {
+  width: 96%;
+  max-width: 1000px;
   display: flex;
-  padding-top: 1rem;
+  padding-top: 2rem;
+  margin: 0 auto;
 }
 
 @media (max-width: 700px) {
-  .Users {
+  .db-container {
     flex-direction: column;
   }
 }
