add a flex-column & bold-text helper class

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,6 +71,13 @@ select {
   justify-content: center;
 }
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+.bold-text {
+  font-weight: 600;
+}
 .unallow-link:hover {
   cursor: not-allowed;
 }
