add styles for error div

--- a/client/src/views/Search/Search.css
+++ b/client/src/views/Search/Search.css
@@ -6,9 +6,18 @@
 .Listings-Results {
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: center; */
   justify-content: space-between;
   flex: 1 0 50%;
+}
+
+.map-error {
+  height: 100%;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.half-width {
+  width: 50%;
 }
 
 /* @media (max-width: 375px) {
