--- a/client/src/components/ShowProfile/ProfileOverview/ProfileOverview.css
+++ b/client/src/components/ShowProfile/ProfileOverview/ProfileOverview.css
@@ -62,3 +62,13 @@
   text-align: center;
   text-shadow: 1px 1px #414141;
 }
+
+@media (max-width: 600px) {
+  .Profile-Homes-Listing--link img {
+    height: 150px;
+    width: 150px;
+  }
+  .Profile-Homes-Listing--link h4 {
+    margin: 60px 0;
+  }
+}
