--- a/client/src/components/ShowProfile/ShowProfile.css
+++ b/client/src/components/ShowProfile/ShowProfile.css
@@ -40,14 +40,19 @@ h5 {
 }
 
 @media (max-width: 700px) {
-  .leftSide .Verification {
-    display: none;
-  }
   .Image-Container img {
     height: 100%;
     width: 100%;
   }
   .leftSide {
     flex: 0 0 20%;
+    margin-left: 1rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .Image-Container img {
+    height: 150px;
+    width: 150px;
   }
 }
