make filters bar sticky

--- a/client/src/components/Filters/Filters.css
+++ b/client/src/components/Filters/Filters.css
@@ -3,6 +3,10 @@
 .Filters {
   padding: 1rem;
   border-bottom: 1px solid #dedede;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  background-color: #fff;
 }
 
 .Filters-Category-Button {
