--- a/client/src/components/Navigation/Toolbar/Toolbar.css
+++ b/client/src/components/Navigation/Toolbar/Toolbar.css
@@ -2,9 +2,13 @@
   border-bottom: 1px solid #dedede;
   display: flex;
   padding: 0 1rem;
-  align-items: baseline;
   justify-content: space-between;
   position: relative;
+}
+
+.Toolbar-Logo {
+  margin-left: 0.25rem;
+  width: 2.5rem;
 }
 
 .NavToggler {
@@ -13,6 +17,8 @@
 
 .Toolbar-Left {
   flex: 1;
+  display: flex;
+  align-items: center;
 }
 
 .Toolbar .NavToggler {
@@ -76,7 +82,6 @@
   }
 
   .NavButtons .NavButton:hover {
-    /* border: none; */
     border-right: 2px solid #333;
     background-color: #fafafa;
   }
